--- a/hwsp/02/sol/02.tex
+++ b/hwsp/02/sol/02.tex
@@ -38,6 +38,41 @@ Somit ist $W$ ein Martingal.
 \item [ii)] Sei $N$ ein Poisson-Prozess mit Intensität $\Lambda(t)=\mathbb{E}[N_t]$.
   Dann ist der kompensierte Poisson-Prozess $N_t-\Lambda(t)_t$ ein Martingal.
 \end{itemize}
+Ein Poisson-Prozess ist càdlàg.
+Da für den kompensierten Poisson-Prozess wie für eine Brownsche Bewegung für alle $t\geq0$ gilt $E[N_t-\Lambda(t)]=E[N_t]-E[N_t]=0$, ist die Argumentation sonst analog zu der von Teilaufgabe i.
+
+\paragraph{Aufgabe 2 \textnormal{(4 Punkte)}.}
+Zeigen Sie, dass für alle quadratintegrierbaren Martingale $M$, dh. $E[M_t^2]<\infty$ für alle $t\in\mathbb{R}_+$, und $s\leq t$ folgende Aussagen gelten:
+\begin{itemize}
+\item [i)] $E[(M_t-M_s)^2\mid{\cal F}_s]=E[M_t^2-M_s^2\mid{\cal F}_s]$.
+\end{itemize}
+Durch Ausquadrieren erhalten wir
+\begin{align*}
+  E[(M_t-M_s)^2]\mid{\cal F}_s]
+  &=E[M_t^2-2M_tM_s+M_s^2\mid{\cal F}_s]\,.
+    \intertext{Da $M$ ein Martingal ist, ist es adaptiert.
+    Damit ist $M_s$ ist ${\cal F}_s$ messbar und wir können es aus der bedingten Erwartung rausziehen.
+    Zudem gilt dafür $E[M_s\mid {\cal F}_s]=M_s$, sodass}
+  &=E[M_t^2\mid{\cal F}_s]-2M_sE[M_t\mid{\cal F}_s]+M_s^2\,.
+    \intertext{Mit der Martingaleigenschaft folgt}
+  &=E[M_t^2\mid{\cal F}_s]-2M_s^2+M_s^2\,.
+    \intertext{Zusammenfassen der letzten beiden Terme liefert}
+  &=E[M_t^2\mid{\cal F}_s]-M_s^2\,.    
+    \intertext{wieder aufgrund der ${\cal F}_s$-Messbarkeit von $M_s$ erhalten wir}
+  &=E[M_t^2-M_s^2\mid{\cal F}_s].
+\end{align*}
+\begin{itemize}
+\item [ii)] $E[(M_t-M_s)^2]=E[M_t^2]-E[M_s^2]$.
+\end{itemize}
+Mit der definierenden Eigenschaft (ii) vom bedingten Erwartungswert ausgewertet auf $\Omega$ können wir schreiben
+\begin{align*}
+  E[(M_t-M_s)^2]
+  &=E\bigl[E[(M_t-M_s)^2\mid{\cal F}_s]\bigr]
+    \intertext{Einsetzten von Teilaufgabe (i) liefert}
+  &=E\bigl[E[M_t^2-M_s^2\mid{\cal F}_s]\bigr]
+    \intertext{und wieder die Eigenschaft (ii) auf $\Omega$ schließlich}
+  &=E[M_t^2-M_s^2]\,.
+\end{align*}
 \bibliography{../../../books/wt}
 \end{document}
 
