page break between the exercieses

--- a/hwsp/02/sol/02.tex
+++ b/hwsp/02/sol/02.tex
@@ -40,7 +40,7 @@ Somit ist $W$ ein Martingal.
 \end{itemize}
 Ein Poisson-Prozess ist càdlàg.
 Da für den kompensierten Poisson-Prozess wie für eine Brownsche Bewegung für alle $t\geq0$ gilt $E[N_t-\Lambda(t)]=E[N_t]-E[N_t]=0$, ist die Argumentation sonst analog zu der von Teilaufgabe i.
-
+\pagebreak
 \paragraph{Aufgabe 2 \textnormal{(4 Punkte)}.}
 Zeigen Sie, dass für alle quadratintegrierbaren Martingale $M$, dh. $E[M_t^2]<\infty$ für alle $t\in\mathbb{R}_+$, und $s\leq t$ folgende Aussagen gelten:
 \begin{itemize}
