started exercise 3 of sheet 3

--- a/books/wt.bib
+++ b/books/wt.bib
@@ -52,3 +52,9 @@ author={R{\"u}schendorf, Ludger},
 year=2016,
 publisher={Springer}
 }
+@book{protter2005stochastic,
+  title={Stochastic differential equations},
+  author={Protter, Philip E and Protter, Philip E},
+  year={2005},
+  publisher={Springer}
+}
