added exercise 2 of sheet 4

--- a/books/wt.bib
+++ b/books/wt.bib
@@ -1,3 +1,17 @@
+@Inbook{Kallenberg2021,
+chapter="9",
+author="Kallenberg, Olav",
+title="Optional Times and Martingales",
+bookTitle="Foundations of Modern Probability ",
+year="2021",
+publisher="Springer International Publishing",
+address="Cham",
+pages="185--206",
+abstract="Filtrations, strictly and weakly optional times, closure properties, optional evaluation and hitting, augmentation, random time change, suband super-martingales, centering and convex maps, optional sampling and stopping, martingale transforms, maximum and upcrossing inequalities, sub-martingale convergence, closed martingales, limits of conditional expectations, regularization of sub-martingales, increasing limitsof super-martingales",
+isbn="978-3-030-61871-1",
+doi="10.1007/978-3-030-61871-1_10",
+url="https://doi.org/10.1007/978-3-030-61871-1_10"
+}
 @book{durrett,
 title =     {Probability: Theory and Examples},
 author =    {Rick Durrett},
