added exercise 2 from sheet 6

--- a/books/wt.bib
+++ b/books/wt.bib
@@ -1,3 +1,10 @@
+@book{jacod2013limit,
+  title={Limit theorems for stochastic processes},
+  author={Jacod, Jean and Shiryaev, Albert},
+  volume={288},
+  year={2013},
+  publisher={Springer Science \& Business Media}
+}
 @Inbook{Kallenberg2021,
 chapter="9",
 author="Kallenberg, Olav",
