added sheet 6 exercise 4

--- a/hwsp/06/sol/Blatt_06.tex
+++ b/hwsp/06/sol/Blatt_06.tex
@@ -40,6 +40,14 @@ Es gilt $A\in\mathscr{M}$.
 Nach dem Doobschen Grenzwertsatz gilt $E[|A_{T_n}|]<\infty$.
 Mit der gefundenen Abschätzung gilt auch $E[|\operatorname{Var}(A)_{T_n}|]<\infty$, also $\operatorname{Var}(A)\in\mathscr{A}_{\text{loc}}^+$.
 Das heißt $A\in\mathscr{A}_{\text{loc}}$.
+
+\paragraph{Aufgabe 4 \textnormal{(4 Punkte)}.}
+Zeigen Sie die Eindeutigkeit in Satz 104.
+
+Wir sollen zeigen, dass für $M,N\in\mathscr{H}^2_{\text{loc}}$ der vorhersehbare Prozess $\langle M,N\rangle\in\mathscr{V}$, so dass $MN-\langle M,N\rangle\in\mathscr{M}_{\text{loc}}$ eindeutig ist.
+Sei hierfür $\langle M,N\rangle'\in\mathscr{V}$ ein anderer vorhersehbarer Prozess, so dass $MN-\langle M,N\rangle\in\mathscr{M}_{\text{loc}}$.
+Dann ist $\langle M,N\rangle-\langle M,N\rangle'=MN-\langle M,N\rangle-(MN-\langle M,N\rangle')\in\mathscr{V}$ ein vorhersehbares lokales Martingal.
+Nach Satz 98 gilt $\langle M,N\rangle-\langle M,N\rangle'=0$, zumindest bis auf eine verschwindende Menge.
 \bibliography{../../../books/wt}
 \end{document}
 
