added exercise 4 of sheet 7

--- a/books/wt.bib
+++ b/books/wt.bib
@@ -1,3 +1,10 @@
+@misc{proofwiki1,
+  title = {Uniformly Continuous Function to Complete Metric Space has Unique Continuous Extension to Closure of Domain},
+  author = {ProofWiki},
+  howpublished = {\url{https://proofwiki.org/wiki/Uniformly_Continuous_Function_to_Complete_Metric_Space_has_Unique_Continuous_Extension_to_Closure_of_Domain}},
+  note = {Accessed: 2023-12-07},
+  year = 2023
+}
 @book{jacod2013limit,
   title={Limit theorems for stochastic processes},
   author={Jacod, Jean and Shiryaev, Albert},
